complete update of site

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -42,7 +42,7 @@ h5.title-bg button {
 }
 
 /***** Links *****/
-a, a:hover { color:#d8450b; }
+a, a:hover { color:#5894f2; }
 
 /***** Misc *****/
 i {margin-right: 3px;}
@@ -100,7 +100,7 @@ blockquote.pull-right {border-right: 5px solid #999;}
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
 	color:#FFF; 
-	background-color:#d8450b;
+	background-color:#5894f2;
 	-webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;  
@@ -110,7 +110,7 @@ blockquote.pull-right {border-right: 5px solid #999;}
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
   	color:#FFF; 
-	background-color:#d8450b;
+	background-color:#5894f2;
 }
 
 ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
@@ -306,7 +306,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
 }
 .project-details {color: #6f6f6f;}
 .project-details a {color: #333333;}
-.project-details a:hover {color:#d8450b; text-decoration: none;}
+.project-details a:hover {color:#5894f2; text-decoration: none;}
 
 .project-info {margin: 0px 0px 40px 0px;}
 .project-info li { 
@@ -341,8 +341,8 @@ a.item-details-link {
 	left: 47px;
 	display: block;
 }
-a.item-zoom-link:hover {background: #d8450b url(../img/gallery-item-icons.png) no-repeat;}
-a.item-details-link:hover {background: #d8450b url(../img/gallery-item-icons.png) no-repeat; background-position: -42px 0px;}
+a.item-zoom-link:hover {background: #5894f2 url(../img/gallery-item-icons.png) no-repeat;}
+a.item-details-link:hover {background: #5894f2 url(../img/gallery-item-icons.png) no-repeat; background-position: -42px 0px;}
 
 .gallery-post-grid {margin:0px;}
 .gallery-post-grid li {list-style: none; float: left; margin-bottom: 30px;}
@@ -456,7 +456,7 @@ ul.post-data li:last-child {padding-right: 0px;}
 	font-style: normal;
 	color: #f8f8f8;
 }
-.blog-post-hover a:hover{ text-decoration: none; color: #d8450b;}
+.blog-post-hover a:hover{ text-decoration: none; color: #5894f2;}
 
 @media (min-width: 768px) and (max-width: 1199px) {
 	.blog-post-hover {width:220px; height:179px;}
@@ -579,7 +579,7 @@ p.side {margin-bottom: 20px;}
 .footer-row { margin-top: 30px;}
 .footer-col {color:#ababab; font-size: 11px;}
 .footer-col a {color:#dcdcdc; font-weight: bold;}
-.footer-col a:hover {color:#d8450b; text-decoration: none;}
+.footer-col a:hover {color:#5894f2; text-decoration: none;}
 .footer-col h5, .footer-col strong {color:#f9f9f9; text-shadow:none;}
 .footer-col h5 {margin-bottom: 25px;}
 .footer-col ul {margin: 0px;}
@@ -627,14 +627,14 @@ a.social-icon {
 }
 a.facebook {background-position: 0px 0px;}
 a.facebook:hover {background-position: 0px -47px;}
-a.twitter{background-position: -52px 0px;}
-a.twitter:hover {background-position: -52px -47px;}
-a.dribble{background-position: -104px 0px;}
-a.dribble:hover {background-position: -104px -47px;}
-a.rss{background-position: -156px 0px;}
-a.rss:hover {background-position: -156px -47px;}
-a.forrst{background-position: -208px 0px;}
-a.forrst:hover {background-position: -208px -47px;}
+a.linkedin{background-position: -52px 0px;}
+a.linkedin:hover {background-position: -52px -47px;}
+a.github{background-position: -104px 0px;}
+a.github:hover {background-position: -104px -47px;}
+a.behance{background-position: -156px 0px;}
+a.behance:hover {background-position: -156px -47px;}
+a.instagram{background-position: -208px 0px;}
+a.instagram:hover {background-position: -208px -47px;}
 
 /**** Sub Footer ****/
 .footer-sub {background: #1f1f1f; padding: 10px 0px;}
@@ -661,8 +661,8 @@ a.accordion-toggle{background: #f5f5f5;}
 .align-left{float: left; margin: 0px 20px 20px 0px;}
 .align-right{float: right; margin: 0px 0px 20px 20px;}
 
-.color-bg { background:#d8450b; }
-.color { color:#d8450b; }
+.color-bg { background:#5894f2; }
+.color { color:#5894f2; }
 .color-bar-1, .color-bar-2 { width:100% }
 .color-bar-1 { background:#414141; height:5px; }
 .color-bar-2 { height:3px; }
